--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,24 @@
         android:inputType="textPassword"
         android:hint="비밀번호 입력" />
 
+    <LinearLayout
+        android:layout_width="359dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="30dp"
+            android:layout_weight="1"
+            android:text="로그인"
+            android:textColor="@color/white"
+            android:backgroundTint="#918D8D"
+            android:textSize="20sp" />
+
+
+    </LinearLayout>
+
 
 
 
