--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,17 +38,22 @@
     <LinearLayout
         android:layout_width="359dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_margin="10dp" >
 
         <Button
+            android:id="@+id/btnLog"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="30dp"
-            android:layout_weight="1"
             android:text="로그인"
             android:textColor="@color/white"
             android:backgroundTint="#918D8D"
             android:textSize="20sp" />
+        <Button
+            android:id="@+id/btnToast"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="토스트 열기" />
 
 
     </LinearLayout>
