--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
         android:textSize="20sp"/>
 
     <EditText
+        android:id="@+id/edtid"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
@@ -30,6 +31,7 @@
         android:layout_marginTop="10dp" />
 
     <EditText
+        android:id="@+id/edtpassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
@@ -42,7 +44,7 @@
         android:layout_margin="10dp" >
 
         <Button
-            android:id="@+id/btnLog"
+            android:id="@+id/btnLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="로그인"
