if 조건문 입력

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         android:textSize="20sp"/>
 
     <EditText
-        android:id="@+id/edtid"
+        android:id="@+id/edtId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
@@ -31,7 +31,7 @@
         android:layout_marginTop="10dp" />
 
     <EditText
-        android:id="@+id/edtpassword"
+        android:id="@+id/edtPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
