--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,8 +20,8 @@
         android:id="@+id/edtId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
-        android:hint="이메일양식" />
+        android:inputType="text"
+        android:hint="영문자" />
 
     <TextView
         android:layout_width="match_parent"
