패스워드 에디트 맞춰서 변경 - 수정 함.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         android:layout_marginTop="10dp" />
 
     <EditText
-        android:id="@+id/edtPassword"
+        android:id="@+id/edtPw"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
